	  on TCP, not UDP.
	* drivers/usbdev/cdcacm.c: Fix an infinite loop that occurs when the serial
	  device is unregisters.
	* arch/arm/src/stm32/stm32_otgfs.c: The driver needs to reset the software (in
	  order to flush the requests) and to disable the software connection when the
	  device is unregistered.
	* include/sys/prctl.h, sched/prctl.c, include/pthread.h:  Add interfaces to
	  support getting and setting of the thread or task name.
	* configs/ubw32:  Added a configuration to support the Sparkfun UBW32 PIC32 board.
	* configs/ubw32/nsh:  Added an NSH configuration for the Sparkfun UBW32 PIC32 board.
	* configs/ubw32/up_buttons.c:  Added button support for Bit Whacker board.
	* configs/stm3240g-eval/nxconsole:  Added a configuration to run the NSH
	  shell in an NX window for the STM3240G-EVAL board.
	* include/cxx/cunistd:  C++ header file to make sure that everything in
	  unistd.h is in the std:: namespace.
	* configs/sim/nxwm:  Added a configuration for testing the NuttX Window Manager
	  (NxWM)
	* fs/fs_fcntl.h:  On success, always returned OK.  However, some fcntl commands
	  require returning other values on success.
	* Various files.  Fix warnings about variables that were initialized by not used.
	* configs/sim/*/defconfig:  Changes to build a 32-bit simulation on a 32-bit
	  platform did not make into all of the Make.defs files.
	* graphics/nxmu/nx_move.c:  Wrong opcode was being used in the server message;
	  Also there was an error in the offset calculation.
	* graphics/nxglib/fb/nxglib_moverectangle.c:  Offset argument is really a 
	  position, not an offset.
	* graphics/nxtk/nxtk_drawframe.c:  Framed windows are now drawn in three
	  colors (instead of just two).
	* drivers/input/stmpe11_*:  Added a driver to support the STMicro STMPE11
	  IO Expander and touchscreen driver.
	* configs/stm3240g-eval/nxwm:  Added to configuration for testing the NxWM
	  window manager on the STM3240G-EVAL board.
